--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
     <body>
         안녕하세요.
         <a href="jumpgame.html">점프게임</a>
+        <a href="/김유빈/0524.html>김유빈</a>
+        <a href="/정에녹/index.html>정에녹</a>
     </body>
 </html>
