--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <body>
         안녕하세요.<br>
-        <li><a href="jumpgame.html">점프게임</a>
-        <li><a href="/김유빈/0524.html>김유빈</a>
-        <li><a href="/정에녹/index.html>정에녹</a>
+        <li><a href="jumpgame.html">점프게임</a></li>
+        <li><a href="/김유빈/0524.html>김유빈</a></li>
+        <li><a href="/정에녹/index.html>정에녹</a></li>
     </body>
 </html>
