--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         안녕하세요.<br>
         <li><a href="jumpgame.html">점프게임</a></li>
         <li><a href="/and/김유빈/0524.html">김유빈</a></li>
+        <li><a href="/and/문선우/index.html">문선우</a></li>
+        <li><a href="/and/문선우/슈팅게임/index.html">문선우 슈팅게임</a></li>
         <li><a href="/and/정에녹/index.html">정에녹</a></li>
     </body>
 </html>
