--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
         <li><a href="/and/문선우/index.html">문선우</a></li>
         <li><a href="/and/문선우/슈팅게임/index.html">문선우 슈팅게임</a></li>
         <li><a href="/and/정에녹/index.html">정에녹</a></li>
+        <li><a href="/and/김서후/index.html">김서후</a></li>
+        <li><a href="/and/권우찬/index.html">권우찬</a></li>
+        <li><a href="/and/김동윤/index.html">김동윤</a></li>
     </body>
 </html>
