--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <li><a href="/and/김서후/index.html">김서후</a></li>
         <li><a href="/and/권우찬/index.html">권우찬</a></li>
         <li><a href="/and/김동윤/index.html">김동윤</a></li>
+        <li><a href="/and/박상원/index.html">박상원</a></li>
     </body>
 </html>
